# miniopy-async

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  publish.py  pyproject.toml  setup.py  test.py  tests.py  tests_issues.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  python-publish.yml  tests.yml
docs/: API.md  build.sh
docs/source/: conf.py  index.rst
example/sanic/: run.py
example/sanic/cache/: 2021社会实践实践报告.docx
example/sanic/templates/: index.html
example/simple_example/: presigned_get_object.py
examples/: progress.py
examples/sanic/: .gitignore  Pipfile  run.py
examples/sanic/templates/: index.html
examples/simple_examples/: .gitignore  Pipfile  append_object.py  bucket_exists.py  compose_object.py  copy_object.py  delete_bucket_encryption.py  delete_bucket_lifecycle.py  delete_bucket_notification.py  delete_bucket_policy.py  delete_bucket_replication.py  delete_bucket_tags.py  delete_object_lock_config.py  delete_object_tags.py  disable_object_legal_hold.py  enable_object_legal_hold.py  fget_object.py  fput_object.py  get_bucket_encryption.py  get_bucket_lifecycle.py  get_bucket_notification.py  get_bucket_policy.py  get_bucket_replication.py  get_bucket_tags.py  get_bucket_versioning.py  get_object.py  get_object_lock_config.py  get_object_retention.py  get_object_tags.py  get_presigned_url.py  is_object_legal_hold_enabled.py  list_buckets.py  list_objects.py  listen_bucket_notification.py  make_bucket.py  minio_with_assume_role_provider.py  minio_with_aws_config_provider.py  minio_with_certificate_identity_provider.py  minio_with_chained_provider.py  minio_with_client_grants_provider.py  (+28 more)
minio/: __init__.py  api.py  commonconfig.py  datatypes.py  deleteobjects.py  error.py  helpers.py  legalhold.py  lifecycleconfig.py  minioadmin.py  notificationconfig.py  objectlockconfig.py  replicationconfig.py  retention.py  select.py  signer.py  sse.py  sseconfig.py  tagging.py  time.py  versioningconfig.py  xml.py
minio/credentials/: __init__.py  credentials.py  providers.py
minio_async/: __init__.py  api.py  commonconfig.py  datatypes.py  deleteobjects.py  error.py  helpers.py  legalhold.py  lifecycleconfig.py  minioadmin.py  notificationconfig.py  objectlockconfig.py  progress.py  replicationconfig.py  retention.py  select.py  signer.py  sse.py  sseconfig.py  tagging.py  time.py  versioningconfig.py  xml.py
minio_async.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
minio_async/credentials/: __init__.py  credentials.py  providers.py
miniopy_async/: __init__.py  api.py  commonconfig.py  crypto.py  datatypes.py  deleteobjects.py  error.py  helpers.py  legalhold.py  lifecycleconfig.py  minioadmin.py  notificationconfig.py  objectlockconfig.py  progress.py  replicationconfig.py  retention.py  select.py  signer.py  sse.py  sseconfig.py  tagging.py  time.py  versioningconfig.py  xml.py
miniopy_async/credentials/: __init__.py  credentials.py  providers.py
tests/functional/: tests.py
tests/pytests/: conftest.py  helpers.py  test_bucket_exist.py  test_copy_object.py  test_credentials.py  test_get_bucket_policy.py  test_get_object.py  test_legal_hold.py  test_life_cycle_config.py  test_list_buckets.py  test_list_objects.py  test_list_objects_v1.py  test_make_bucket.py  test_minio.py  test_notification_config.py  test_object_lock_config.py  test_presigned_get_object.py  test_presigned_put_object.py  test_put_object.py  test_remove_bucket.py  test_remove_object.py  test_remove_objects.py  test_replication_config.py  test_retention.py  test_signing.py  test_sse_config.py  test_stat_object.py  test_tagging.py  test_versioning_config.py
tests/unit/: aio_utils_test.py
